# webrtc-learn

./: CMakeLists.txt  README.md  SYHeader.h  SYYuvToRgb.cc  SYYuvToRgb.h  encode_log.txt  fun_test.cc  main.cc  rgb2jpeg.h  video_header.h  yuv2bmp.cc  yuv2rgb.cc
base/: array_view.h  atomic_ops.h  base_time.cc  base_time.h  buffer.h  byte_rw.h  callback.cc  callback.h  copy_on_write_buffer.cc  copy_on_write_buffer.h  lock.h  magic.h  min_heap.h  my_thread.cc  my_thread.h  scoped_refptr.h  task_queue.cc  task_queue.h  thread_test.cc  type_traits.h  wrapper.h  zero_memory.h
bmp2jpeg/: bmp.cc  bmp.h  bmp2jpeg.cc  datatype.h  dct.cc  dct.h  encode.cc  encode.h  huffencode.cc  huffencode.h  io.cc  io.h  jpeg.cc  jpeg.h
endecoder/: CMakeLists.txt  H264Decoder.cc  H264Decoder.h  echo_h264_decoder.cc  echo_h264_encoder.cc  ffmpeg_test.cc  videocodec.cc  videocodec.h
fake/: fake_test.cc  fake_video.cc  fake_video.h
fun_test/: yuv2jpeg.cc  yuv2jpeg.h  yuvrecord.cc  yuvrecord.h
h264parser/: h264_parser.cc  h264_parser.h  parser_test.cc
logging/: base.h
packetizer/: h264_common.h  non_rtp.cc  non_rtp.h  non_rtp_h264.cc  non_rtp_h264.h  non_rtp_packet.cc  non_rtp_packet.h  non_rtp_packet_to_send.cc  non_rtp_packet_to_send.h  packet_test.cc
record/: h264_record.cc  h264_record.h  yuv_record.cc  yuv_record.h
script/: get_rate.py
stream/: rtc_recv_stream.cc  rtc_recv_stream.h  rtc_send_stream.cc  rtc_send_stream.h
tool/: ReadMe.md  rtp.cc  rtp.h
tool/dropper/: 1280x720_info.txt  main.cc  split.cc  split.h
tools/: dropper.cc  psnr.c  psnr.h  t_psnr.cc
video_capture/: video_bridge.h  video_capture.h
